Follow-up fix for bug#12822 - SysConfig should make better use of white space.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.SystemConfiguration.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.SystemConfiguration.css
@@ -926,10 +926,6 @@ h2.SearchResults {
     content: "-";
 }
 
-.Array > .ArrayItem {
-    display: inline-block;
-}
-
 .IsLockedByMe .ArrayItem > .SettingContent {
     width: calc(100% - 16px); /* 100% minus the width of the button on the right minus the padding of combined 6px */
     max-width: none !important;
@@ -1110,6 +1106,12 @@ h2.SearchResults {
 
 .ArrayItem .SettingContent {
     padding: 3px;
+    margin-left: 0px !important;
+    margin-bottom: 5px;
+}
+
+.Array > div:last-of-type .SettingContent {
+    margin-bottom: 0px;
 }
 
 .ArrayItem .SettingContent textarea {
@@ -1313,18 +1315,16 @@ h2.SearchResults {
     padding: 0px;
     display: inline-block;
     margin-left: 5px;
-    max-width: calc(100% - 220px); /* full width minus key + arrow width */
+    min-width: calc(100% - 220px); /* full width minus key + arrow width */
 }
 
 .IsLockedByMe .HashItem .SettingContent {
     min-width: calc(100% - 220px); /* full width minus key + arrow width */
-    max-width: none;
 }
 
 .ArrayItem .HashItem .SettingContent,
 .HashItem .HashItem .SettingContent {
     min-width: calc(100% - 220px); /* full width minus key + arrow width */
-    max-width: none;
 }
 
 .HashItem .HashItem .SettingContent {
@@ -1461,6 +1461,10 @@ h2.SearchResults {
     margin-left: -10px;
     margin-right: 5px;
     cursor: help;
+}
+
+.Icon .fa + .fa {
+    margin-left: 0px;
 }
 
 .RTL .Icon .fa {
